Refresh user balance in header
