# Yum/src/main/java/org/bootcamp/yum/api/model/OrderUpdate.java
@@ -1,0 +1,109 @@
+package org.bootcamp.yum.api.model;
+
+import java.util.Objects;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonCreator;
+import io.swagger.annotations.ApiModel;
+import io.swagger.annotations.ApiModelProperty;
+import java.math.BigDecimal;
+import org.bootcamp.yum.api.model.LastEdit;
+import javax.validation.Valid;
+import javax.validation.constraints.*;
+
+/**
+ * Order last edit and user balance
+ */
+@ApiModel(description = "Order last edit and user balance")
+@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2017-10-06T15:19:56.604+03:00")
+
+public class OrderUpdate   {
+  @JsonProperty("balance")
+  private BigDecimal balance = null;
+
+  @JsonProperty("lastEdit")
+  private LastEdit lastEdit = null;
+
+  public OrderUpdate balance(BigDecimal balance) {
+    this.balance = balance;
+    return this;
+  }
+
+   /**
+   * Get balance
+   * @return balance
+  **/
+  @ApiModelProperty(value = "")
+
+  @Valid
+
+  public BigDecimal getBalance() {
+    return balance;
+  }
+
+  public void setBalance(BigDecimal balance) {
+    this.balance = balance;
+  }
+
+  public OrderUpdate lastEdit(LastEdit lastEdit) {
+    this.lastEdit = lastEdit;
+    return this;
+  }
+
+   /**
+   * Get lastEdit
+   * @return lastEdit
+  **/
+  @ApiModelProperty(value = "")
+
+  @Valid
+
+  public LastEdit getLastEdit() {
+    return lastEdit;
+  }
+
+  public void setLastEdit(LastEdit lastEdit) {
+    this.lastEdit = lastEdit;
+  }
+
+
+  @Override
+  public boolean equals(java.lang.Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    OrderUpdate orderUpdate = (OrderUpdate) o;
+    return Objects.equals(this.balance, orderUpdate.balance) &&
+        Objects.equals(this.lastEdit, orderUpdate.lastEdit);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(balance, lastEdit);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class OrderUpdate {\n");
+    
+    sb.append("    balance: ").append(toIndentedString(balance)).append("\n");
+    sb.append("    lastEdit: ").append(toIndentedString(lastEdit)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(java.lang.Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+}
+
